--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -22,6 +22,11 @@ pylint = "^2.5"
 {% if cookiecutter.use_pre_commit == 'y' %}
 pre-commit = "^2.6"
 {% endif %}
+{% if cookiecutter.use_portray_docs == 'y' %}
+pdocs = "^1.0"
+mkdocs = "^1.1"
+portray = "^1.4"
+{% endif %}
 
 [tool.pytest.ini_options]
 minversion = "6.0"
